# prompt-composition-language

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
examples/: agent.pcl  persona.pcl  tools.pcl
src/pcl/: __init__.py  cli.py  compiler.py  errors.py  parser.py
src/pcl/datamodel/: __init__.py  ast.py  compiled_template.py  ir_segment_types.py
src/pcl/serde/: __init__.py  ir_deserialize.py  ir_serialize.py
tests/: test_cli.py  test_compiler.py  test_parser.py
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: pcl.tmLanguage.json
website/: README.md  index.html  main.js  playground.js  style.css
