[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pcl = "pcl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pcl"]
